--- a/matchaeggtart/config/kitty/kitty.conf
+++ b/matchaeggtart/config/kitty/kitty.conf
@@ -2741,6 +2741,8 @@ dynamic_background_opacity yes
 hide_window_decorations yes
 
 # 光标追影
+shell_integration no-cursor
+cursor_shape block
 cursor_trail 3
 cursor_trail_decay 0.1 0.4
 
@@ -2750,42 +2752,6 @@ allow_remote_control yes
 # 复制粘贴优化
 copy_on_select yes
 strip_trailing_spaces smart
-
-# =================
-# Kitty快捷键映射配置
-# =================
-
-# 窗口分割（kitty快捷键核心功能）
-# map ctrl+shift+enter  no_op
-# map ctrl+b>"          launch              --location=hsplit
-# map ctrl+b>%          launch              --location=vsplit
-# map ctrl+b>n          next_window
-# map ctrl+b>p          previous_window
-# map ctrl+b>x          close_window
-# map ctrl+b>1          first_window
-# map ctrl+b>2          second_window
-# map ctrl+b>3          third_window
-# map ctrl+b>4          fourth_window
-# map ctrl+b>5          fifth_window
-# map ctrl+b>6          sixth_window
-# map ctrl+b>7          seventh_window
-# map ctrl+b>8          eighth_window
-# map ctrl+b>9          ninth_window
-# map ctrl+b>r          start_resizing_window
-# map ctrl+b>h          split_horizontal
-# map ctrl+b>v          split_vertical
-#
-# #Se cambian lo que tiene 
-# map shift+up          move_window         up
-# map shift+left        move_window         left
-# map shift+right       move_window         right
-# map shift+down        move_window         down
-#
-# map ctrl+left         neighboring_window  left
-# map ctrl+right        neighboring_window  right
-# map ctrl+up           neighboring_window  up
-# map ctrl+down         neighboring_window  down
-
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Macchiato
