--- a/matchaeggtart/config/kitty/kitty.conf
+++ b/matchaeggtart/config/kitty/kitty.conf
@@ -2754,6 +2754,6 @@ copy_on_select yes
 strip_trailing_spaces smart
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Macchiato
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
