--- a/matchaeggtart/config/kitty/kitty.conf
+++ b/matchaeggtart/config/kitty/kitty.conf
@@ -2757,3 +2757,5 @@ strip_trailing_spaces smart
 # Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
+
+enabled_layouts tall:bias=60;full_size=1;mirrored=true
