--- a/matchaeggtart/config/kitty/kitty.conf
+++ b/matchaeggtart/config/kitty/kitty.conf
@@ -2735,8 +2735,8 @@ remember_window_size  no
 initial_window_width  1280
 initial_window_height 768
 
-background_opacity 0.9
-dynamic_background_opacity yes
+# background_opacity 0.9
+# dynamic_background_opacity yes
 
 hide_window_decorations yes
 
